--- a/Scripts/Preprocessing/GetTabularData.ipynb
+++ b/Scripts/Preprocessing/GetTabularData.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get Clinical Data from the the first medical examination corresponding to the patients of which MRI Images are available\n",
+    "\n",
+    "### Carlos Sanmiguel Vila"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -31,9 +40,9 @@
    "source": [
     "# ADNI MERGE\n",
     "\n",
-    "filename_1 =  '/content/drive/My Drive/ADNI/Dataset/TabularData/ADNIMERGE_COL.csv'\n",
-    "filename_2 =  '/content/drive/My Drive/ADNI/Dataset/TabularData/DESIKANLAB.csv'\n",
-    "file_label = '/content/drive/My Drive/ADNI/N3D2.npy'\n"
+    "filename_1 =  '/content/drive/My Drive/ADNI/Dataset/TabularData/ADNIMERGE_COL.csv' # Demographic data and Cognitive tests\n",
+    "filename_2 =  '/content/drive/My Drive/ADNI/Dataset/TabularData/DESIKANLAB.csv' # Genetic Data\n",
+    "file_label = '/content/drive/My Drive/ADNI/N3D2.npy' # id patients with MRI\n"
    ]
   },
   {
@@ -2659,47 +2668,6 @@
    "source": [
     "df_bl.to_csv('/content/drive/My Drive/ADNI/Clinical2.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 50
-    },
-    "colab_type": "code",
-    "id": "gk-sbbDGfDSc",
-    "outputId": "a801203f-badc-4cba-ef84-350080d25c50"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test accuracy :  0.4396551724137931\n",
-      "train accuracy :  0.7978260869565217\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_pred2 = model_train.predict(X_test2)\n",
-    "train_pred2 = model_train.predict(X_train2)\n",
-    "\n",
-    "print(\"test accuracy : \", accuracy_score(Y_test, test_pred2))\n",
-    "print(\"train accuracy : \", accuracy_score(Y_train, train_pred2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "lhkr8mvGfL1Y"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
